--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,13 +2,17 @@ ja:
   activerecord:
     models:
       user: 'ユーザー'
+      post: '投稿'
     attributes:
       user:
         email: 'メールアドレス'
         password: 'パスワード'
         password_confirmation: 'パスワード確認'
         username: 'ユーザー名'
-
+      post:
+        images: '画像'
+        body: '本文'
+        
   attributes:
     id: 'ID'
     created_at: '作成日時'
