--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,3 +18,8 @@ ja:
     id: 'ID'
     created_at: '作成日時'
     updated_at: '更新日時'
+  time:
+    formats:
+      default: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
+      long: "%Y/%m/%d %H:%M"
+      short: "%m/%d %H:%M"
